@@ -39,6 +39,8 @@ xine-lib (1.1.5) (Unreleased)
     (downplayed to 16-bit).
   * Added centre-cutout (4:3 in 16:9) to the expand plugin.
     Patch by Reinhard Nissl.
+  * Fix support of block devices for AC3 and DTS demuxers. Thanks to Matthias
+    Kretz for the original patch.
 
 xine-lib (1.1.4)
   * Mark string-type configuration items according to whether they're plain
